--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "gulp-jshint": "^1.10.0",
     "gulp-sass": "^2.0.0",
     "gulp-supervisor": "^0.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matteopatisso/WEDtestat2"
   }
 }
